# python_for_finance_cookbook

./: .gitignore  README.md  chapter_1.py  chapter_2.py  chapter_3.py  main.py  pyproject.toml
